{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 18,
  "lineage": "dfe93b75-f56d-8c22-d55c-1a81bf875af2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "adonis_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bb2f7cbe0aa41ffa",
            "arn": "arn:aws:ec2:eu-central-1:590183887485:instance/i-040cd0c64122e26fb",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "aiolos-ec2-ecr-pull-profile",
            "id": "i-040cd0c64122e26fb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 0,
            "key_name": "resonect-prod-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fe57745b19557460",
            "private_dns": "ip-10-0-1-137.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.137",
            "public_ip": "35.159.119.241",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05a7c2531dd246602",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b8e71bd855f8a56",
            "tags": {
              "Name": "adonis-api",
              "Project": "aiolos"
            },
            "tags_all": {
              "Name": "adonis-api",
              "Project": "aiolos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0888e4047bcd538e0"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ecr_pull",
            "aws_iam_role.ec2_ecr_pull",
            "aws_security_group.adonis_api",
            "aws_subnet.aiolos",
            "aws_vpc.aiolos",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aiolos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:590183887485:internet-gateway/igw-07e3e48373be3f196",
            "id": "igw-07e3e48373be3f196",
            "owner_id": "590183887485",
            "region": "eu-central-1",
            "tags": {
              "Name": "aiolos-igw",
              "Project": "aiolos"
            },
            "tags_all": {
              "Name": "aiolos-igw",
              "Project": "aiolos"
            },
            "vpc_id": "vpc-0de96dc5f81ff211d"
          },
          "dependencies": [
            "aws_vpc.aiolos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07e3e48373be3f196",
            "id": "r-rtb-04a1c7ab0c5ef8ea51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-04a1c7ab0c5ef8ea5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aiolos",
            "aws_route_table.aiolos",
            "aws_vpc.aiolos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aiolos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:590183887485:route-table/rtb-04a1c7ab0c5ef8ea5",
            "id": "rtb-04a1c7ab0c5ef8ea5",
            "owner_id": "590183887485",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07e3e48373be3f196",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aiolos-rt",
              "Project": "aiolos"
            },
            "tags_all": {
              "Name": "aiolos-rt",
              "Project": "aiolos"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de96dc5f81ff211d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aiolos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aiolos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e53456033a9c0378",
            "region": "eu-central-1",
            "route_table_id": "rtb-04a1c7ab0c5ef8ea5",
            "subnet_id": "subnet-09b8e71bd855f8a56"
          },
          "dependencies": [
            "aws_route_table.aiolos",
            "aws_subnet.aiolos",
            "aws_vpc.aiolos",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "adonis_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:590183887485:security-group/sg-0888e4047bcd538e0",
            "description": "Allow HTTP, HTTPS, and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0888e4047bcd538e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "adonis-api-sg",
            "name_prefix": "",
            "owner_id": "590183887485",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "adonis-api-sg",
              "Project": "aiolos"
            },
            "tags_all": {
              "Name": "adonis-api-sg",
              "Project": "aiolos"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de96dc5f81ff211d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aiolos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aiolos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:590183887485:subnet/subnet-09b8e71bd855f8a56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b8e71bd855f8a56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183887485",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "aiolos-subnet",
              "Project": "aiolos"
            },
            "tags_all": {
              "Name": "aiolos-subnet",
              "Project": "aiolos"
            },
            "vpc_id": "vpc-0de96dc5f81ff211d"
          },
          "dependencies": [
            "aws_vpc.aiolos",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aiolos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:590183887485:vpc/vpc-0de96dc5f81ff211d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f7e0f8f61af638b3",
            "default_route_table_id": "rtb-0eb53ead5c8219568",
            "default_security_group_id": "sg-0ada973bc15adaa30",
            "dhcp_options_id": "dopt-0ed04c87b3a9cda09",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0de96dc5f81ff211d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eb53ead5c8219568",
            "owner_id": "590183887485",
            "region": "eu-central-1",
            "tags": {
              "Name": "aiolos-vpc",
              "Project": "aiolos"
            },
            "tags_all": {
              "Name": "aiolos-vpc",
              "Project": "aiolos"
            }
          }
        }
      ]
    }
  ]
}